--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@tiptap/extension-underline": "^2.0.0-beta.199",
     "@tiptap/react": "^2.0.0-beta.199",
     "@tiptap/starter-kit": "^2.0.0-beta.199",
+    "agora-rtc-sdk-ng": "^4.15.0",
+    "agora-rtm-sdk": "^1.6.0-204",
     "axios": "^1.1.0",
     "firebase": "^9.9.4",
     "framer-motion": "^7.3.2",
     "html-react-parser": "^3.0.4",
     "moment": "^2.29.4",
+    "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
@@ -21,6 +24,8 @@
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
