--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Wema",
-  "name": "Wema Ummah",
+  "name": "Wema Forum",
   "icons": [
     {
       "src": "/images/logo_64.png",
