--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux": "^4.2.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "webrtc-adapter": "^8.2.0"
   },
