--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "forum",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,6 +14,7 @@
     "agora-rtm-sdk": "^1.6.0-204",
     "axios": "^1.1.0",
     "firebase": "^9.9.4",
+    "firebase-tools": "^11.19.0",
     "framer-motion": "^7.3.2",
     "html-react-parser": "^3.0.4",
     "moment": "^2.29.4",
@@ -21,6 +23,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.5",
