--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tiptap/extension-underline": "^2.0.0-beta.199",
     "@tiptap/react": "^2.0.0-beta.199",
     "@tiptap/starter-kit": "^2.0.0-beta.199",
+    "adhan": "^4.4.3",
     "agora-rtc-sdk-ng": "^4.15.0",
     "agora-rtm-sdk": "^1.6.0-204",
     "axios": "^1.1.0",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.37.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
