--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ REACT_APP_STRIPE_KEY=pk_test_51L7BhfEk74y2bHhrlDyIuTasaYeh5lQ1HwJ49FOUCbL4KvFsRk
 REACT_APP_ADMIN_ID=2610197720041987
 REACT_APP_VAPID_KEY=BGQeVBD9gxLxXc-ZFLi25oiJaByod9cGe4HBifKxYRdKz111YnV6PJ_VB-ObFCqNEy5jJAyqlJA2u5c5CnrLD3c
 REACT_APP_FIREBASE_DATABASE_URL=https://wema-68a94.firebaseio.com
+REACT_APP_GOOGLE_API_KEY=AIzaSyAa0W1L4DSt0stHngAqn-qaaJuFldOUutw
